tests/machine/x/cpp/string_in_operator.mochi.error
line 14: ../../../tests/machine/x/cpp/string_in_operator.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/string_in_operator.mochi.cpp:14:28: error: request for member ‘begin’ in ‘"cat"’, which is of non-class type ‘const char [4]’
   14 |     print((std::find("cat".begin(), "cat".end(), s) != "cat".end()));
      |                            ^~~~~
../../../tests/machine/x/cpp/string_in_operator.mochi.cpp:14:43: error: request for member ‘end’ in ‘"cat"’, which is of non-class type ‘const char [4]’
   14 |     print((std::find("cat".begin(), "cat".end(), s) != "cat".end()));
      |                                           ^~~
../../../tests/machine/x/cpp/string_in_operator.mochi.cpp:14:62: error: request for member ‘end’ in ‘"cat"’, which is of non-class type ‘const char [4]’
   14 |     print((std::find("cat".begin(), "cat".end(), s) != "cat".end()));
      |                                                              ^~~
../../../tests/machine/x/cpp/string_in_operator.mochi.cpp:15:28: error: request for member ‘begin’ in ‘"dog"’, which is of non-class type ‘const char [4]’
   15 |     print((std::find("dog".begin(), "dog".end(), s) != "dog".end()));
      |                            ^~~~~
../../../tests/machine/x/cpp/string_in_operator.mochi.cpp:15:43: error: request for member ‘end’ in ‘"dog"’, which is of non-class type ‘const char [4]’
   15 |     print((std::find("dog".begin(), "dog".end(), s) != "dog".end()));
      |                                           ^~~
../../../tests/machine/x/cpp/string_in_operator.mochi.cpp:15:62: error: request for member ‘end’ in ‘"dog"’, which is of non-class type ‘const char [4]’
   15 |     print((std::find("dog".begin(), "dog".end(), s) != "dog".end()));
      |                                                              ^~~

 13 |     auto s = "catch";
 14 |     print((std::find("cat".begin(), "cat".end(), s) != "cat".end()));
 15 |     print((std::find("dog".begin(), "dog".end(), s) != "dog".end()));
